<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>denumerous-core</artifactId>
  <packaging>jar</packaging>
  <name>denumerous-core</name>
  <url>https://code.google.com/p/denumerous/</url>

  <parent>
    <groupId>com.sf.denumerous</groupId>
    <artifactId>denumerous</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-jar-plugin</artifactId>
		<configuration>
			<archive>
				<manifest>
					<mainClass>com.sf.denumerous.Denumerous</mainClass>
				</manifest>
			</archive>
		</configuration>
	  </plugin>
    </plugins>
  </build>

</project>